--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,8 +38,8 @@ collections:
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Body", name: "body", widget: "markdown" }
 
-  - name: "course"
-    label: "Course"
+  - name: "courses"
+    label: "Courses"
     folder: "src/pages/courses"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
@@ -48,7 +48,7 @@ collections:
           label: "Template Key",
           name: "templateKey",
           widget: "hidden",
-          default: "single-courses",
+          default: "single-course",
         }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
